# Aurum

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  web_app.py
src/: config.py
src/modules/: __init__.py  etf_analyzer.py  fundamentals.py  news.py  prices.py  report.py  scanner.py  utils.py  validator.py
src/utils/: calculations.py  formatters.py  translator.py
web/: app.py
web/static/: style.css
web/static/js/: main.js
web/templates/: index.html
